--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,3 +384,26 @@ button {
   align-items: center;
   gap: 0.3rem;
 }
+/* ABOUT */
+.about_img {
+  width: 180px;
+  border-radius: 0.5rem;
+  justify-self: center;
+  align-self: center;
+}
+
+.about_description {
+  text-align: center;
+  margin-bottom: var(--mb-1-5);
+}
+
+.about_info-title {
+  font-size: var(--h2-font-size);
+  font-weight: var(--font-semi-bold);
+  color: var(--first-color);
+}
+
+.about_button {
+  display: flex;
+  justify-content: center;
+}
