--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1047,3 +1047,25 @@ button {
     grid-template-columns: repeat(2, 1fr);
   }
 }
+/* background */
+
+.back section{
+  z-index: -2;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+
+  animation: animateBg 50s linear infinite;
+}
+
+@keyframes animateBg{
+  0%,100%{
+      transform: scale(1);
+  }
+  50%{
+      transform: scale(1.2);
+  }
+}
+
